--- a/public/shows/lamb_of_god_14_02_2020_video/index.html
+++ b/public/shows/lamb_of_god_14_02_2020_video/index.html
@@ -24,14 +24,22 @@
   </div>
 
   <div class="navbar-center">
-<nav id="main-nav" class="nav nav-pills justify-content-center">
-  <a class="nav-link" href="/tradelist/">Home</a>
-  <a class="nav-link" href="/tradelist/shows/">Browse Shows</a>
-  <a class="nav-link" href="/tradelist/updates/">Updates</a>
-</nav>
+	<nav id="main-nav" class="nav nav-pills justify-content-center">
+	<a class="nav-link" href="/tradelist/">Home</a>
+	<a class="nav-link" href="/tradelist/shows/">Browse Shows</a>
+	<a class="nav-link" href="/tradelist/updates/">Updates</a>
+	</nav>
   </div>
 
   <div class="navbar-right">
+    
+    <button
+        class="btn btn-outline-success add-to-cart me-2"
+        data-id="lamb_of_god_14_02_2020_video"
+        data-json="%7B%22originalTitle%22%3A%22Lamb%20Of%20God%20-%2014.02.2020%20-%20Chicago%20-%20IL%20-%20USA%20-%20House%20Of%20Vans%22%2C%22created%22%3A1748629086%2C%22lastUpdated%22%3A1748629086%2C%22bands%22%3A%5B%22Lamb%20Of%20God%22%5D%2C%22startDate%22%3A%7B%22day%22%3A%2214%22%2C%22month%22%3A%2202%22%2C%22year%22%3A%222020%22%7D%2C%22startDateUnix%22%3A1581638400%2C%22endDate%22%3A%7B%22day%22%3A%2214%22%2C%22month%22%3A%2202%22%2C%22year%22%3A%222020%22%7D%2C%22endDateUnix%22%3A1581638400%2C%22location%22%3A%7B%22city%22%3A%22Chicago%22%2C%22state%22%3A%22IL%22%2C%22country%22%3A%22USA%22%2C%22venue%22%3A%22House%20Of%20Vans%22%2C%22event%22%3A%22%22%7D%2C%22tvChannel%22%3A%22%22%2C%22showName%22%3A%22%22%2C%22source%22%3A%22%22%2C%22category%22%3A%5B%22video%22%5D%2C%22master%22%3Afalse%2C%22public%22%3Atrue%2C%22ownIdentifier%22%3A%22HDD%23D%22%2C%22tradeLabel%22%3A%22%22%2C%22authoredBy%22%3A%22%22%2C%22transferredBy%22%3A%22%22%2C%22notes%22%3A%22%22%2C%22tapers%22%3A%5B%5D%2C%22specs%22%3A%7B%22media%22%3A%5B%7B%22type%22%3A%22DVD-5%22%2C%22size%22%3A1.09%2C%22unit%22%3A%22Gb%22%7D%5D%2C%22chapters%22%3Afalse%2C%22menu%22%3Afalse%2C%22length%22%3A4060%2C%22video%22%3A%5B%7B%22tvFormat%22%3A%22%22%2C%22ratio%22%3A%22%22%2C%22resolution%22%3A%221920x1080%22%2C%22bitrateType%22%3A%22%22%2C%22bitrateKbps%22%3Anull%2C%22fps%22%3A%2230%22%2C%22standard%22%3A%22MPEG4%22%2C%22codec%22%3A%22H264%22%2C%22letterboxed%22%3Afalse%7D%5D%2C%22audio%22%3A%5B%7B%22language%22%3A%22%22%2C%22codec%22%3A%22AAC%22%2C%22rateHz%22%3A48000%2C%22bitrateKbps%22%3Anull%2C%22channels%22%3A2%7D%5D%2C%22sourceDetail%22%3A%7B%22recordingType%22%3A%22PRO%22%2C%22sourceMediaType%22%3A%22WebStream%22%2C%22finalMediaType%22%3A%22HD%22%2C%22fileFormat%22%3A%22MKV%22%7D%7D%2C%22relatedShows%22%3A%5B%5D%2C%22childOf%22%3A%22%22%2C%22images%22%3A%5B%7B%22folder%22%3A%2271%22%2C%22filename%22%3A%2273595032.jpg%22%2C%22externalId%22%3A%2218wUVqFt_U1NIuuR5QfIyMByRlXn3EiSr%22%7D%2C%7B%22folder%22%3A%2271%22%2C%22filename%22%3A%2203251845.jpg%22%2C%22externalId%22%3A%221_noDz63GKNNqkaJ97yNnOXqsGykZLOob%22%7D%2C%7B%22folder%22%3A%2271%22%2C%22filename%22%3A%2273993875.jpg%22%2C%22externalId%22%3A%221VkExgb3OF9fc556OFItXV64ium3nWJ5v%22%7D%2C%7B%22folder%22%3A%2271%22%2C%22filename%22%3A%2278676371.jpg%22%2C%22externalId%22%3A%221kRdxDId8yFY_2tXWVf-VIoJ-N_Xby7wV%22%7D%5D%2C%22setlist%22%3A%5B%7B%22order%22%3A1%2C%22song%22%3A%22Laid%20To%20Rest%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A2%2C%22song%22%3A%22Now%20You&#39;ve%20Got%20Something%20To%20Die%20For%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A3%2C%22song%22%3A%22Ruin%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A4%2C%22song%22%3A%22Walk%20With%20Me%20In%20Hell%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A5%2C%22song%22%3A%22Set%20To%20Fail%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A6%2C%22song%22%3A%22Hourglass%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A7%2C%22song%22%3A%22512%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A8%2C%22song%22%3A%22Ghost%20Walking%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A9%2C%22song%22%3A%22Checkmate%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A10%2C%22song%22%3A%22Descending%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A11%2C%22song%22%3A%22Contractor%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A12%2C%22song%22%3A%22Omerta%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A13%2C%22song%22%3A%22Redneck%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%5D%2C%22extras%22%3A%5B%5D%2C%22fileSlug%22%3A%22lamb_of_god_14_02_2020_video%22%2C%22permalink%22%3A%22%2Fshows%2Flamb_of_god_14_02_2020_video%2Findex.html%22%7D"
+        title="Add this show to your trade cart"
+    >➕</button>
+    
     <button class="btn btn-sm btn-cart" data-bs-toggle="modal" data-bs-target="#cartModal">🛒 Cart</button>
   </div>
 </header>
@@ -340,19 +348,74 @@
    </table>
 </div>
 <script src="/tradelist/scripts/hammer.min.js"></script>
-<!-- Modal for image preview -->
-<div id="imageModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:1000; align-items:center; justify-content:center;">
-   <div class="modal-inner">
-      <img id="modalClose" class="close-btn" src="/tradelist/assets/images/icon_close.png" alt="Close" onclick="closeModal()" />
-      <img id="modalPrev" class="nav-arrow" src="/tradelist/assets/images/icon_prev.png" alt="Previous" onclick="prevImage()" />
-      <img id="modalNext" class="nav-arrow" src="/tradelist/assets/images/icon_next.png" alt="Next" onclick="nextImage()" />
-      <!-- Image frame -->
-      <img id="modalImage" style="width:100%; height:100%; border:none; border-radius:0px;"></img>
-      <!-- Swipe overlay -->
-      <div id="gestureOverlay" style="position:absolute; top:0; left:0; width:100%; height:100%; z-index:10;"></div>
-      <div id="imageCounter" style="position: absolute; top: 14px; left: 20px; font-size: 13px; background-color: rgba(0, 0, 0, 0.5); color: #fff; padding: 3px 8px; border-radius: 6px; z-index: 30; font-family: sans-serif;"></div>
-   </div>
+<!-- Modal for cart -->
+<div class="modal fade" id="cartModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="modal-title">Trade Request</span>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p class="modal-description">ℹ️ Please provide your contact details. All fields marked with <span class="text-danger">*</span> are required.</p>
+
+        <span style="font-size: 0.85rem; color: #222; font-weight: 600;">Selected Shows</span>
+        <div class="table-responsive">
+          <table id="cart-table" class="table table-bordered table-striped">
+            <thead>
+              <tr>
+                <th>Artist</th>
+                <th>Date</th>
+                <th>Location</th>
+                <th>Source</th>
+                <th>Tapers</th>
+                <th>Remove</th>
+              </tr>
+            </thead>
+            <tbody>
+              </tbody>
+          </table>
+        </div>
+
+        <span style="font-size: 0.85rem; color: #222; font-weight: 600;">Your Contact Information</span><p>
+        <form id="cart-form">
+          <div class="mb-3">
+            <label for="name" class="form-label">Your Name <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Your Email <span class="text-danger">*</span></label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="website" class="form-label">Your Website</label>
+            <input type="url" class="form-control" id="website" name="website">
+          </div>
+          <div class="mb-3">
+            <label for="comments" class="form-label">Comments / Additional Info</label>
+            <textarea class="form-control" id="comments" name="comments" rows="3"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="send-cart">Send Trade Request</button>
+      </div>
+    </div>
+  </div>
 </div>
+<div id="imageModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:1000; align-items:center; justify-content:center;">
+  <div class="modal-inner">
+    <img id="modalClose" class="close-btn" src="/tradelist/assets/images/icon_close.png" alt="Close" onclick="closeModal()" />
+    <img id="modalPrev" class="nav-arrow" src="/tradelist/assets/images/icon_prev.png" alt="Previous" onclick="prevImage()" />
+    <img id="modalNext" class="nav-arrow" src="/tradelist/assets/images/icon_next.png" alt="Next" onclick="nextImage()" />
+    <img id="modalImage" style="width:100%; height:100%; border:none; border-radius:0px;"></img>
+    <div id="gestureOverlay" style="position:absolute; top:0; left:0; width:100%; height:100%; z-index:10;"></div>
+    <div id="imageCounter" style="position: absolute; top: 14px; left: 20px; font-size: 13px; background-color: rgba(0, 0, 0, 0.5); color: #fff; padding: 3px 8px; border-radius: 6px; z-index: 30; font-family: sans-serif;"></div>
+  </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/tradelist/scripts/cart.js"></script>
 <script src="/tradelist/scripts/notes-credts-expand.js"></script>
 <script src="/tradelist/scripts/image-modal-viewer.js"></script>
 <script src="/tradelist/scripts/setlist-toggle.js"></script>
