--- a/public/shows/metallica_24_10_1992_video/index.html
+++ b/public/shows/metallica_24_10_1992_video/index.html
@@ -24,14 +24,22 @@
   </div>
 
   <div class="navbar-center">
-<nav id="main-nav" class="nav nav-pills justify-content-center">
-  <a class="nav-link" href="/tradelist/">Home</a>
-  <a class="nav-link" href="/tradelist/shows/">Browse Shows</a>
-  <a class="nav-link" href="/tradelist/updates/">Updates</a>
-</nav>
+	<nav id="main-nav" class="nav nav-pills justify-content-center">
+	<a class="nav-link" href="/tradelist/">Home</a>
+	<a class="nav-link" href="/tradelist/shows/">Browse Shows</a>
+	<a class="nav-link" href="/tradelist/updates/">Updates</a>
+	</nav>
   </div>
 
   <div class="navbar-right">
+    
+    <button
+        class="btn btn-outline-success add-to-cart me-2"
+        data-id="metallica_24_10_1992_video"
+        data-json="%7B%22originalTitle%22%3A%22Metallica%20-%2024.10.1992%20-%20London%20-%20England%20-%20Wembley%20Arena%22%2C%22created%22%3A1748629086%2C%22lastUpdated%22%3A1748629086%2C%22bands%22%3A%5B%22Metallica%22%5D%2C%22startDate%22%3A%7B%22day%22%3A%2224%22%2C%22month%22%3A%2210%22%2C%22year%22%3A%221992%22%7D%2C%22startDateUnix%22%3A719884800%2C%22endDate%22%3A%7B%22day%22%3A%2224%22%2C%22month%22%3A%2210%22%2C%22year%22%3A%221992%22%7D%2C%22endDateUnix%22%3A719884800%2C%22location%22%3A%7B%22city%22%3A%22London%22%2C%22state%22%3A%22%22%2C%22country%22%3A%22England%22%2C%22venue%22%3A%22Wembley%20Arena%22%2C%22event%22%3A%22%22%7D%2C%22tvChannel%22%3A%22%22%2C%22showName%22%3A%22%22%2C%22source%22%3A%22%22%2C%22category%22%3A%5B%22video%22%5D%2C%22master%22%3Afalse%2C%22public%22%3Atrue%2C%22ownIdentifier%22%3A%22HDD%23D%22%2C%22tradeLabel%22%3A%22%22%2C%22authoredBy%22%3A%22%22%2C%22transferredBy%22%3A%22%22%2C%22notes%22%3A%22%22%2C%22tapers%22%3A%5B%22Niclas%20Swaslund%22%5D%2C%22specs%22%3A%7B%22media%22%3A%5B%7B%22type%22%3A%22DVD-5%22%2C%22size%22%3A4.05%2C%22unit%22%3A%22Gb%22%7D%2C%7B%22type%22%3A%22DVD-5%22%2C%22size%22%3A3.77%2C%22unit%22%3A%22Gb%22%7D%5D%2C%22chapters%22%3Atrue%2C%22menu%22%3Atrue%2C%22length%22%3A9138%2C%22video%22%3A%5B%7B%22tvFormat%22%3A%22PAL%22%2C%22ratio%22%3A%224%3A3%22%2C%22resolution%22%3A%22720x576%22%2C%22bitrateType%22%3A%22VBR%22%2C%22bitrateKbps%22%3Anull%2C%22fps%22%3A%22%22%2C%22standard%22%3A%22%22%2C%22codec%22%3A%22%22%2C%22letterboxed%22%3Afalse%7D%5D%2C%22audio%22%3A%5B%7B%22language%22%3A%22en%22%2C%22codec%22%3A%22AC3%22%2C%22rateHz%22%3Anull%2C%22bitrateKbps%22%3Anull%2C%22channels%22%3A2%7D%5D%2C%22sourceDetail%22%3A%7B%22recordingType%22%3A%22AMT%22%2C%22sourceMediaType%22%3A%22VHS%22%2C%22finalMediaType%22%3A%22%22%2C%22fileFormat%22%3A%22DVD%22%7D%7D%2C%22relatedShows%22%3A%5B%5D%2C%22childOf%22%3A%22%22%2C%22images%22%3A%5B%7B%22folder%22%3A%221%22%2C%22filename%22%3A%2279122.jpg%22%2C%22externalId%22%3A%2218bKbem0zQzxebLNhEoqG2M1fg_YpMubm%22%7D%2C%7B%22folder%22%3A%221%22%2C%22filename%22%3A%2229943.jpg%22%2C%22externalId%22%3A%221Peu5s7uMZ9khDhXJ4qJGWyLdoK8enrla%22%7D%2C%7B%22folder%22%3A%221%22%2C%22filename%22%3A%2261665.jpg%22%2C%22externalId%22%3A%221WrQPaZ640TCh9_zWCRxfosVJ1--dldtA%22%7D%2C%7B%22folder%22%3A%221%22%2C%22filename%22%3A%2297119.jpg%22%2C%22externalId%22%3A%221el1uyVgQAt4vgyUWcZw31Bdp-YPv0KR6%22%7D%5D%2C%22setlist%22%3A%5B%7B%22order%22%3A1%2C%22song%22%3A%22Ecstasy%20Of%20Gold%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A2%2C%22song%22%3A%22Enter%20Sandman%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A3%2C%22song%22%3A%22Creeping%20Death%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A4%2C%22song%22%3A%22Harvester%20Of%20Sorrow%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A5%2C%22song%22%3A%22Sanitarium%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A6%2C%22song%22%3A%22Sad%20But%20True%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A7%2C%22song%22%3A%22Wherever%20I%20May%20Roam%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A8%2C%22song%22%3A%22Bass%20Solo%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A9%2C%22song%22%3A%22Through%20The%20Never%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A10%2C%22song%22%3A%22The%20Unforgiven%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A11%2C%22song%22%3A%22Justice%20Medley%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A12%2C%22song%22%3A%22Guitar%20Solos%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A13%2C%22song%22%3A%22Nothing%20Else%20Matters%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A14%2C%22song%22%3A%22For%20Whom%20The%20Bell%20Tolls%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A15%2C%22song%22%3A%22Fade%20To%20Black%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A16%2C%22song%22%3A%22Whiplash%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A17%2C%22song%22%3A%22Master%20Of%20Puppets%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A18%2C%22song%22%3A%22Seek%20And%20Destroy%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A19%2C%22song%22%3A%22One%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A20%2C%22song%22%3A%22Last%20Caress%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A21%2C%22song%22%3A%22Am%20I%20Evil%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A22%2C%22song%22%3A%22Battery%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A23%2C%22song%22%3A%22Stone%20Cold%20Crazy%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%5D%2C%22extras%22%3A%5B%5D%2C%22fileSlug%22%3A%22metallica_24_10_1992_video%22%2C%22permalink%22%3A%22%2Fshows%2Fmetallica_24_10_1992_video%2Findex.html%22%7D"
+        title="Add this show to your trade cart"
+    >➕</button>
+    
     <button class="btn btn-sm btn-cart" data-bs-toggle="modal" data-bs-target="#cartModal">🛒 Cart</button>
   </div>
 </header>
@@ -446,19 +454,74 @@
    </table>
 </div>
 <script src="/tradelist/scripts/hammer.min.js"></script>
-<!-- Modal for image preview -->
-<div id="imageModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:1000; align-items:center; justify-content:center;">
-   <div class="modal-inner">
-      <img id="modalClose" class="close-btn" src="/tradelist/assets/images/icon_close.png" alt="Close" onclick="closeModal()" />
-      <img id="modalPrev" class="nav-arrow" src="/tradelist/assets/images/icon_prev.png" alt="Previous" onclick="prevImage()" />
-      <img id="modalNext" class="nav-arrow" src="/tradelist/assets/images/icon_next.png" alt="Next" onclick="nextImage()" />
-      <!-- Image frame -->
-      <img id="modalImage" style="width:100%; height:100%; border:none; border-radius:0px;"></img>
-      <!-- Swipe overlay -->
-      <div id="gestureOverlay" style="position:absolute; top:0; left:0; width:100%; height:100%; z-index:10;"></div>
-      <div id="imageCounter" style="position: absolute; top: 14px; left: 20px; font-size: 13px; background-color: rgba(0, 0, 0, 0.5); color: #fff; padding: 3px 8px; border-radius: 6px; z-index: 30; font-family: sans-serif;"></div>
-   </div>
+<!-- Modal for cart -->
+<div class="modal fade" id="cartModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="modal-title">Trade Request</span>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p class="modal-description">ℹ️ Please provide your contact details. All fields marked with <span class="text-danger">*</span> are required.</p>
+
+        <span style="font-size: 0.85rem; color: #222; font-weight: 600;">Selected Shows</span>
+        <div class="table-responsive">
+          <table id="cart-table" class="table table-bordered table-striped">
+            <thead>
+              <tr>
+                <th>Artist</th>
+                <th>Date</th>
+                <th>Location</th>
+                <th>Source</th>
+                <th>Tapers</th>
+                <th>Remove</th>
+              </tr>
+            </thead>
+            <tbody>
+              </tbody>
+          </table>
+        </div>
+
+        <span style="font-size: 0.85rem; color: #222; font-weight: 600;">Your Contact Information</span><p>
+        <form id="cart-form">
+          <div class="mb-3">
+            <label for="name" class="form-label">Your Name <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Your Email <span class="text-danger">*</span></label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="website" class="form-label">Your Website</label>
+            <input type="url" class="form-control" id="website" name="website">
+          </div>
+          <div class="mb-3">
+            <label for="comments" class="form-label">Comments / Additional Info</label>
+            <textarea class="form-control" id="comments" name="comments" rows="3"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="send-cart">Send Trade Request</button>
+      </div>
+    </div>
+  </div>
 </div>
+<div id="imageModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:1000; align-items:center; justify-content:center;">
+  <div class="modal-inner">
+    <img id="modalClose" class="close-btn" src="/tradelist/assets/images/icon_close.png" alt="Close" onclick="closeModal()" />
+    <img id="modalPrev" class="nav-arrow" src="/tradelist/assets/images/icon_prev.png" alt="Previous" onclick="prevImage()" />
+    <img id="modalNext" class="nav-arrow" src="/tradelist/assets/images/icon_next.png" alt="Next" onclick="nextImage()" />
+    <img id="modalImage" style="width:100%; height:100%; border:none; border-radius:0px;"></img>
+    <div id="gestureOverlay" style="position:absolute; top:0; left:0; width:100%; height:100%; z-index:10;"></div>
+    <div id="imageCounter" style="position: absolute; top: 14px; left: 20px; font-size: 13px; background-color: rgba(0, 0, 0, 0.5); color: #fff; padding: 3px 8px; border-radius: 6px; z-index: 30; font-family: sans-serif;"></div>
+  </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/tradelist/scripts/cart.js"></script>
 <script src="/tradelist/scripts/notes-credts-expand.js"></script>
 <script src="/tradelist/scripts/image-modal-viewer.js"></script>
 <script src="/tradelist/scripts/setlist-toggle.js"></script>
