--- a/public/shows/morphine_08_03_1994_audio/index.html
+++ b/public/shows/morphine_08_03_1994_audio/index.html
@@ -24,14 +24,22 @@
   </div>
 
   <div class="navbar-center">
-<nav id="main-nav" class="nav nav-pills justify-content-center">
-  <a class="nav-link" href="/tradelist/">Home</a>
-  <a class="nav-link" href="/tradelist/shows/">Browse Shows</a>
-  <a class="nav-link" href="/tradelist/updates/">Updates</a>
-</nav>
+	<nav id="main-nav" class="nav nav-pills justify-content-center">
+	<a class="nav-link" href="/tradelist/">Home</a>
+	<a class="nav-link" href="/tradelist/shows/">Browse Shows</a>
+	<a class="nav-link" href="/tradelist/updates/">Updates</a>
+	</nav>
   </div>
 
   <div class="navbar-right">
+    
+    <button
+        class="btn btn-outline-success add-to-cart me-2"
+        data-id="morphine_08_03_1994_audio"
+        data-json="%7B%22originalTitle%22%3A%22Morphine%20-%2008.03.1994%20-%20Cleveland%20-%20OH%20-%20USA%20-%20Peabodys%20Down%20Under%20%5BAUDIO%5D%22%2C%22created%22%3A1748629086%2C%22lastUpdated%22%3A1748629086%2C%22bands%22%3A%5B%22Morphine%22%5D%2C%22startDate%22%3A%7B%22day%22%3A%2208%22%2C%22month%22%3A%2203%22%2C%22year%22%3A%221994%22%7D%2C%22startDateUnix%22%3A763084800%2C%22endDate%22%3A%7B%22day%22%3A%2208%22%2C%22month%22%3A%2203%22%2C%22year%22%3A%221994%22%7D%2C%22endDateUnix%22%3A763084800%2C%22location%22%3A%7B%22city%22%3A%22Cleveland%22%2C%22state%22%3A%22OH%22%2C%22country%22%3A%22USA%22%2C%22venue%22%3A%22Peabodys%20Down%20Under%22%2C%22event%22%3A%22%22%7D%2C%22tvChannel%22%3A%22%22%2C%22showName%22%3A%22%22%2C%22source%22%3A%22%22%2C%22category%22%3A%5B%22audio%22%5D%2C%22master%22%3Afalse%2C%22public%22%3Atrue%2C%22ownIdentifier%22%3A%22HDD%23D%22%2C%22tradeLabel%22%3A%22%22%2C%22authoredBy%22%3A%22%22%2C%22transferredBy%22%3A%22Terry%20Watts%22%2C%22notes%22%3A%22SBD%20recording.%20%20DAT(c)%20%26gt%3B%20Tascam%20DA-20mkII%20%26gt%3B%20SPDIF%20%26gt%3B%20Tascam%20HD-P2%20%26gt%3B%20Audacity%20(16%2F48%20%26gt%3B%2016%2F44)%20%26gt%3B%20CDWave%20%26gt%3B%20FLAC.%22%2C%22tapers%22%3A%5B%5D%2C%22specs%22%3A%7B%22media%22%3A%5B%7B%22type%22%3A%22CD%22%2C%22size%22%3A357%2C%22unit%22%3A%22Mb%22%7D%5D%2C%22chapters%22%3Afalse%2C%22menu%22%3Afalse%2C%22length%22%3A4908%2C%22video%22%3A%7B%22format%22%3A%22%22%2C%22ratio%22%3A%22%22%2C%22resolution%22%3A%22%22%2C%22bitrateType%22%3A%22%22%2C%22bitrateKbps%22%3Anull%2C%22letterboxed%22%3Afalse%7D%2C%22audio%22%3A%5B%7B%22language%22%3A%22%22%2C%22codec%22%3A%22FLAC%22%2C%22rateHz%22%3A44100%2C%22bitrateKbps%22%3A1411%2C%22channels%22%3A2%7D%5D%2C%22sourceDetail%22%3A%7B%22recordingType%22%3A%22PRO%22%2C%22sourceMediaType%22%3A%22SBD%22%2C%22finalMediaType%22%3A%22%22%2C%22fileFormat%22%3A%22FLAC%22%7D%7D%2C%22relatedShows%22%3A%5B%5D%2C%22childOf%22%3A%22%22%2C%22images%22%3A%5B%5D%2C%22setlist%22%3A%5B%7B%22order%22%3A1%2C%22song%22%3A%22Intro%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A2%2C%22song%22%3A%22Have%20A%20Lucky%20Day%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A3%2C%22song%22%3A%22I&#39;m%20Free%20Now%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A4%2C%22song%22%3A%22Do%20Not%20Go%20Quietly%20Unto%20Your%20Grave%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A5%2C%22song%22%3A%22Goddess%20(Mark%20Sandman%20song)%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A6%2C%22song%22%3A%22A%20Head%20With%20Wings%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A7%2C%22song%22%3A%22Sharks%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A8%2C%22song%22%3A%22Honey%20White%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A9%2C%22song%22%3A%22Whisper%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A10%2C%22song%22%3A%22Cure%20For%20Pain%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A11%2C%22song%22%3A%22All%20Wrong%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A12%2C%22song%22%3A%22Shame%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A13%2C%22song%22%3A%22Yes%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A14%2C%22song%22%3A%22Thursday%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A15%2C%22song%22%3A%22Come%20Along%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A16%2C%22song%22%3A%22Free%20Love%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A17%2C%22song%22%3A%22Candy%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A18%2C%22song%22%3A%22Morphine%20Infomercial%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A19%2C%22song%22%3A%22You%20Speak%20My%20Language%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A20%2C%22song%22%3A%22You%20Look%20Like%20Rain%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%2C%7B%22order%22%3A21%2C%22song%22%3A%22Buena%22%2C%22feat%22%3A%22%22%2C%22note%22%3A%22%22%2C%22comment%22%3A%22%22%2C%22coverOf%22%3A%22%22%7D%5D%2C%22extras%22%3A%5B%5D%2C%22fileSlug%22%3A%22morphine_08_03_1994_audio%22%2C%22permalink%22%3A%22%2Fshows%2Fmorphine_08_03_1994_audio%2Findex.html%22%7D"
+        title="Add this show to your trade cart"
+    >➕</button>
+    
     <button class="btn btn-sm btn-cart" data-bs-toggle="modal" data-bs-target="#cartModal">🛒 Cart</button>
   </div>
 </header>
@@ -372,19 +380,74 @@
    </table>
 </div>
 <script src="/tradelist/scripts/hammer.min.js"></script>
-<!-- Modal for image preview -->
-<div id="imageModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:1000; align-items:center; justify-content:center;">
-   <div class="modal-inner">
-      <img id="modalClose" class="close-btn" src="/tradelist/assets/images/icon_close.png" alt="Close" onclick="closeModal()" />
-      <img id="modalPrev" class="nav-arrow" src="/tradelist/assets/images/icon_prev.png" alt="Previous" onclick="prevImage()" />
-      <img id="modalNext" class="nav-arrow" src="/tradelist/assets/images/icon_next.png" alt="Next" onclick="nextImage()" />
-      <!-- Image frame -->
-      <img id="modalImage" style="width:100%; height:100%; border:none; border-radius:0px;"></img>
-      <!-- Swipe overlay -->
-      <div id="gestureOverlay" style="position:absolute; top:0; left:0; width:100%; height:100%; z-index:10;"></div>
-      <div id="imageCounter" style="position: absolute; top: 14px; left: 20px; font-size: 13px; background-color: rgba(0, 0, 0, 0.5); color: #fff; padding: 3px 8px; border-radius: 6px; z-index: 30; font-family: sans-serif;"></div>
-   </div>
+<!-- Modal for cart -->
+<div class="modal fade" id="cartModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="modal-title">Trade Request</span>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p class="modal-description">ℹ️ Please provide your contact details. All fields marked with <span class="text-danger">*</span> are required.</p>
+
+        <span style="font-size: 0.85rem; color: #222; font-weight: 600;">Selected Shows</span>
+        <div class="table-responsive">
+          <table id="cart-table" class="table table-bordered table-striped">
+            <thead>
+              <tr>
+                <th>Artist</th>
+                <th>Date</th>
+                <th>Location</th>
+                <th>Source</th>
+                <th>Tapers</th>
+                <th>Remove</th>
+              </tr>
+            </thead>
+            <tbody>
+              </tbody>
+          </table>
+        </div>
+
+        <span style="font-size: 0.85rem; color: #222; font-weight: 600;">Your Contact Information</span><p>
+        <form id="cart-form">
+          <div class="mb-3">
+            <label for="name" class="form-label">Your Name <span class="text-danger">*</span></label>
+            <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Your Email <span class="text-danger">*</span></label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="website" class="form-label">Your Website</label>
+            <input type="url" class="form-control" id="website" name="website">
+          </div>
+          <div class="mb-3">
+            <label for="comments" class="form-label">Comments / Additional Info</label>
+            <textarea class="form-control" id="comments" name="comments" rows="3"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="send-cart">Send Trade Request</button>
+      </div>
+    </div>
+  </div>
 </div>
+<div id="imageModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:1000; align-items:center; justify-content:center;">
+  <div class="modal-inner">
+    <img id="modalClose" class="close-btn" src="/tradelist/assets/images/icon_close.png" alt="Close" onclick="closeModal()" />
+    <img id="modalPrev" class="nav-arrow" src="/tradelist/assets/images/icon_prev.png" alt="Previous" onclick="prevImage()" />
+    <img id="modalNext" class="nav-arrow" src="/tradelist/assets/images/icon_next.png" alt="Next" onclick="nextImage()" />
+    <img id="modalImage" style="width:100%; height:100%; border:none; border-radius:0px;"></img>
+    <div id="gestureOverlay" style="position:absolute; top:0; left:0; width:100%; height:100%; z-index:10;"></div>
+    <div id="imageCounter" style="position: absolute; top: 14px; left: 20px; font-size: 13px; background-color: rgba(0, 0, 0, 0.5); color: #fff; padding: 3px 8px; border-radius: 6px; z-index: 30; font-family: sans-serif;"></div>
+  </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/tradelist/scripts/cart.js"></script>
 <script src="/tradelist/scripts/notes-credts-expand.js"></script>
 <script src="/tradelist/scripts/image-modal-viewer.js"></script>
 <script src="/tradelist/scripts/setlist-toggle.js"></script>
